# fastapi_boilerplate

./: .gitignore  pyproject.toml  ruff.toml
fastapi-app/: .env.template  alembic.ini  main.py
fastapi-app/alembic/: env.py
fastapi-app/api/: __init__.py
fastapi-app/api/api_v1/: __init__.py  users.py
fastapi-app/config/: config.py
fastapi-app/models/: __init__.py  base.py  user.py
fastapi-app/utils/: __init__.py  db_helper.py
